[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.11.0", default-features = false, features = ["io-util", "macros",  "time", "sync", "net", "rt-multi-thread"] }
tokio-tungstenite = {version = "0.15.0", default-features = false}
futures-util = { version = "0.3.17", default-features = false, features = ["async-await", "sink", "std"] }